--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,8 @@ python-telegram-bot==13.15
 requests==2.28.2
 beautifulsoup4==4.11.1
 schedule==1.1.0
+transformers==4.30.0
+sentence-transformers==2.2.2
+psycopg2-binary==2.9.6
+redis==4.5.5
+scikit-learn==1.2.2
