--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,11 +16,9 @@ python-telegram-bot = "==13.15"
 requests = "==2.28.2"
 beautifulsoup4 = "==4.11.1"
 schedule = "==1.1.0"
-transformers = "^4.30.0"
-sentence-transformers = "^2.2.2"
+openai = "^0.27.0"
 psycopg2-binary = "^2.9.6"
 redis = "^5.0.0"
-scikit-learn = "^1.2.2"
 
 [tool.poetry.group.dev.dependencies]
 black = "^25.1.0"
