--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,13 +12,16 @@ package-mode = false
 
 [tool.poetry.dependencies]
 python = ">=3.9,<4.0"
-python-telegram-bot = "==13.15"
-requests = "==2.28.2"
-beautifulsoup4 = "==4.11.1"
-schedule = "==1.1.0"
-openai = "^0.27.0"
-psycopg2-binary = "^2.9.6"
-redis = "^5.0.0"
+python-telegram-bot = { version = "==22.0", extras = ["job-queue"] }
+requests = "==2.32.3"
+beautifulsoup4 = "==4.13.3"
+schedule = "==1.2.2"
+openai = "^1.68.0"
+psycopg2-binary = "^2.9.10"
+redis = "^5.2.1"
+feedparser = "^6.0.11"
+python-dotenv = "^1.0.1"
+nest_asyncio = "^1.6.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^25.1.0"
