--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,27 +1,22 @@
 repos:
-  - repo: https://github.com/psf/black
-    rev: 25.1.0
-    hooks:
-      - id: black
+    - repo: https://github.com/psf/black
+      rev: 25.1.0
+      hooks:
+          - id: black
 
-  - repo: https://github.com/PyCQA/isort
-    rev: 6.0.1
-    hooks:
-      - id: isort
+    - repo: https://github.com/PyCQA/isort
+      rev: 6.0.1
+      hooks:
+          - id: isort
 
-  - repo: https://github.com/myint/autoflake
-    rev: v2.3.1
-    hooks:
-      - id: autoflake
-        args: ["--in-place", "--remove-all-unused-imports", "--remove-unused-variables", "--expand-star-imports"]
-
-  - repo: https://github.com/hhatto/autopep8
-    rev: v2.3.2
-    hooks:
-      - id: autopep8
-        args: ["--in-place", "--aggressive", "--aggressive"]
-
-  - repo: https://github.com/pycqa/flake8
-    rev: 7.1.2
-    hooks:
-      - id: flake8
+    - repo: https://github.com/myint/autoflake
+      rev: v2.3.1
+      hooks:
+          - id: autoflake
+            args:
+                [
+                    "--in-place",
+                    "--remove-all-unused-imports",
+                    "--remove-unused-variables",
+                    "--expand-star-imports",
+                ]
