--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ redis = "^5.2.1"
 feedparser = "^6.0.11"
 python-dotenv = "^1.0.1"
 nest_asyncio = "^1.6.0"
+sentry-sdk = "^2.24.1"
 
 [tool.poetry.group.dev.dependencies]
 black = "^25.1.0"
