--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ python-dotenv = "^1.0.1"
 nest_asyncio = "^1.6.0"
 sentry-sdk = "^2.24.1"
 pycurl = "^7.45.6"
+tiktoken = "^0.9.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^25.1.0"
