--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,8 @@ nest_asyncio = "^1.6.0"
 sentry-sdk = "^2.24.1"
 pycurl = "^7.45.6"
 tiktoken = "^0.9.0"
+aiohttp = "^3.11.14"
+sqlalchemy = "^2.0.40"
 
 [tool.poetry.group.dev.dependencies]
 black = "^25.1.0"
@@ -33,6 +35,7 @@ autoflake = "^2.3.1"
 autopep8 = "^2.3.2"
 flake8 = "^7.1.2"
 pre-commit = "^3.3.3"
+pytest = "^8.1.1"
 
 [build-system]
 requires = ["poetry-core>=1.5.0"]
