--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -14,6 +14,11 @@ jobs:
         name: Analyze CodeQL
         runs-on: ubuntu-latest
 
+        permissions:
+            actions: read
+            contents: read
+            security-events: write
+
         steps:
             - uses: actions/checkout@v4
 
