--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,7 +35,7 @@ jobs:
               run: poetry install --no-root
 
             - name: Run tests
-              run: poetry run pytest --maxfail=1 --disable-warnings -q
+              run: poetry run pytest --cov --cov-branch --cov-report=xml
 
             - name: Upload Coverage Report
               if: always()
