--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ autopep8 = "^2.3.2"
 flake8 = "^7.1.2"
 pre-commit = "^3.3.3"
 pytest = "^8.1.1"
+pytest-cov = "^6.0.0"
 
 [build-system]
 requires = ["poetry-core>=1.5.0"]
