--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,7 @@ on:
         branches: [main]
 
 jobs:
-    test:
+    coverage:
         runs-on: ubuntu-latest
 
         strategy:
@@ -40,5 +40,44 @@ jobs:
             - name: Upload Coverage Report
               if: always()
               uses: codecov/codecov-action@v5
+              with:
+                  token: ${{ secrets.CODECOV_TOKEN }}
+
+    test:
+        runs-on: ubuntu-latest
+
+        strategy:
+            matrix:
+                python-version: ["3.13"]
+
+        steps:
+            - name: Checkout repository
+              uses: actions/checkout@v4
+              with:
+                  fetch-depth: 2
+
+            - name: Set up Python
+              uses: actions/setup-python@v5
+              with:
+                  python-version: ${{ matrix.python-version }}
+
+            - name: Install Poetry
+              uses: abatilo/actions-poetry@v4
+
+            - name: Cache Poetry packages
+              uses: actions/cache@v4
+              with:
+                  path: ~/.cache/pypoetry
+                  key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
+
+            - name: Install dependencies
+              run: poetry install --no-root
+
+            - name: Run tests and generate JUnit report
+              run: poetry run pytest --junitxml=junit.xml -o junit_family=legacy
+
+            - name: Upload test results to Codecov
+              if: ${{ !cancelled() }}
+              uses: codecov/test-results-action@v1
               with:
                   token: ${{ secrets.CODECOV_TOKEN }}
