--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ package-mode = false
 
 [tool.poetry.dependencies]
 python = ">=3.9,<4.0"
-python-telegram-bot = { version = "==22.0", extras = ["job-queue"] }
+python-telegram-bot = { version = "==22.0", extras = ["job-queue, webhooks"] }
 requests = "==2.32.3"
 beautifulsoup4 = "==4.13.3"
 schedule = "==1.2.2"
