--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ flake8 = "^7.1.2"
 pre-commit = "^4.0.0"
 pytest = "^8.1.1"
 pytest-cov = "^6.0.0"
+pytest-asyncio = "^0.23.8"
 
 [build-system]
 requires = ["poetry-core>=1.5.0"]
