--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,9 @@ DEFAULT_LANGUAGE=ko
 SCRAPE_INTERVAL=1800
 FIRST_SCRAPE_DELAY=10
 
+# Search keywords
+SEARCH_KEYWORDS=테슬라,tesla
+
 # Webhook settings
 WEBHOOK_URL=https://yourdomain.com/your_telegram_bot_token
 WEBHOOK_PORT=8080
