--- a/.env.test
+++ b/.env.test
@@ -10,6 +10,9 @@ OPENAI_API_KEY=your_dummy_openai_api_key
 # Scraping interval (in seconds, 600 = 10 minutes)
 SCRAPE_INTERVAL=300
 
+# Search keywords
+SEARCH_KEYWORDS=테슬라,tesla
+
 # PostgreSQL connection: host is service name 'db' from docker-compose
 DATABASE_URL=postgresql://dummy_user:dummy_password@db:5432/test_database
 
